k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yorlink-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yorlink-backend
  template:
    metadata:
      labels:
        app: yorlink-backend
    spec:
      containers:
        - name: backend
          image: chanathipcha24/yorlink-backend:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: yorlink-backend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
